--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
-    <link rel="stylesheet" href="done/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="app">
+    <div class="web-app">
     </div>
     <h2> Expense Tracker</h2>
     <div class="balance-container">
