feat(styling): modifies the text and test file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 id="balance">$0.00</h1>
     </div>
 
-        <div class="cashflow-container">
+        <div class="cash-cont">
             <div class="income-container">
                 <h2>INCOME</h2>
                 <p id="income"> $1200</p>
