feat(styling,text):optimizes the styling in css and merges two elements in html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <div class="web-app">
     </div>
@@ -16,56 +18,56 @@
         <h1 id="balance">$0.00</h1>
     </div>
 
-        <div class="cash-cont">
-            <div class="income-container">
-                <h2>INCOME</h2>
-                <p id="income"> $1200</p>
-            </div>
+    <div class="cash-cont">
+        <div class="income-cont">
+            <h2>INCOME</h2>
+            <p id="income"> $1200</p>
         </div>
-                <div class="expense-container">
-                    <h2>EXPENSE</h2>
-                    <div id="expense">$200</div>
-                </div>
-
-                <div class="transaction container">
-                    <h2>Transaction History</h2>
-                    <ul>
-                        <li>Salary
-                            <div>
-                            <span class="income-amnt">$15,000</span>
-                            <button>X</button>
-                            </div>
-                        </li>
-                      <li>
-                        Internet
-                            <div>
-                            <span class="exp-amnt">$2000</span>
-                            <button>X</button>
-                            </div>
-                      </li>
-                      <li>
-                        Buy Groceries
-                            <div>
-                            <span class="exp-amnt">$1000</span>
-                            <button>X</button>
-                            </div>
-                      </li>
-                    </ul>
-                    <div class="form-container">
-                        <h2> Add New Entry</h2>
-                        <form>
-                            <label for="name"> Name</label>
-                            <input id="name" type="text">
-                            <label for="amount" type="number"> Amount</label>
-                            <input id="amount" type="number">
-                            <button id="incomeBtn">Add Income</button>
-                        <button id="expenseBtn">Add Expense</button>    
-                      </form>
-                    </div>
-                </div>
-
-            </div>
+        <div class="expense-container">
+            <h2>EXPENSE</h2>
+            <div id="expense">$200</div>
         </div>
+    </div>
+
+    <div class="transaction container">
+        <h2>Transaction History</h2>
+        <ul>
+            <li>Salary
+                <div>
+                    <span class="income-amnt">$15,000</span>
+                    <button>X</button>
+                </div>
+            </li>
+            <li>
+                Internet
+                <div>
+                    <span class="exp-amnt">$2000</span>
+                    <button>X</button>
+                </div>
+            </li>
+            <li>
+                Buy Groceries
+                <div>
+                    <span class="exp-amnt">$1000</span>
+                    <button>X</button>
+                </div>
+            </li>
+        </ul>
+        <div class="form-container">
+            <h2> Add New Entry</h2>
+            <form>
+                <label for="name"> Name</label>
+                <input id="name" type="text">
+                <label for="amount" type="number"> Amount</label>
+                <input id="amount" type="number">
+                <button id="incomeBtn">Add Income</button>
+                <button id="expenseBtn">Add Expense</button>
+            </form>
+        </div>
+    </div>
+
+    </div>
+    </div>
 
 
 
@@ -74,4 +76,5 @@
     </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
