--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="transaction container">
         <h2>Transaction History</h2>
-        <ul>
+        <ul id="transaction">
             <li>Salary
                 <div>
                     <span class="income-amnt">$15,000</span>
