fix(text file): the changes made determines the styling of an id in the css and html files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="transaction container">
-        <h2>Transaction History</h2>
+        <h2 id="h2">Transaction History</h2>
         <ul id="transaction">
             <li>Salary
                 <div>
