feat(html): modifies the text structure of the code

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 </div>
             </li>
         </ul>
+        </div>
         <div class="form-container">
             <h2> Add New Entry</h2>
             <form>
